# JEC

./: .dockerignore  .env  .env.example  .gitignore  ACCOUNTING_FEATURES.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  QUICK_START.md  README.md  SYSTEM_DIAGRAMS.md  docker-compose.yml  nginx.conf  nginx.conf.prod  pyproject.toml  requirements.txt  run.sh  test_db_loading.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
.streamlit/: config.toml
app/: analyzer.py  cache.py  data_manager.py  database.py  models.py  streamlit_dashboard.py
backend/: Dockerfile  pyproject.toml  requirements.txt  test_cashflow.py  test_server_logic.py
backend/app/: __init__.py  analyzer.py  data_manager.py  database.py  main.py
backend/data/: jec_analysis.db  performa.xlsx
backend/data/csv/: payable.csv  receivable.csv
backend/scripts/: migrate_to_sqlite.py  test_new_system.py
data/: Payable.xlsx  invoices.xlsx  jec_analysis.db  receivable.xlsx
data/csv/: invoices.csv  performa.csv
data/legacy/: Payable.xlsx
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/messages/: en.json  fa.json
frontend/project.inlang/: settings.json
frontend/src/: app.css  hooks.server.ts.bak
frontend/src/lib/: api.ts
frontend/src/lib/components/: BarChart.svelte  (+1 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: migrate_to_sqlite.py  test_new_system.py
(+12 files in other folders)
